# cmbp

./: CMakeLists.txt  README  backprop.cpp  benchmark.cpp  filetrain.cpp  graphics_demo.cpp  main.cpp  mbp.h  mbp.hpp  mm.cpp  mm.h  random.cpp  random.h  thread_test.cpp  trainer.cpp
